# bendclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
src/app/: Cargo.toml  build.rs
src/app/src/: agent.rs  error.rs  lib.rs  types.rs
src/app/src/agent/: agent.rs  convert.rs  event.rs  mod.rs  resume_search.rs  run_manager.rs  runtime.rs  sandbox.rs  session.rs  session_locator.rs  tools.rs  variables.rs
src/app/src/cli/: app.rs  args.rs  cli.rs  command.rs  format.rs  mod.rs  sink.rs
src/app/src/compact/: context_view.rs  mod.rs  orchestrator.rs
src/app/src/conf/: config.rs  env.rs  env_writer.rs  file.rs  load.rs  mod.rs  (+2 more)
src/app/tests/: agent_prompt_test.rs  agent_thinking_test.rs  agent_variable_test.rs  aggregator_test.rs  ask_user_bridge_test.rs  ask_user_render_test.rs  auto_compact_test.rs  cli_args_test.rs  cli_format_test.rs  cli_test.rs  command_test.rs  compact_test.rs  conf_load_test.rs  conf_test.rs  dashboard_search_test.rs  delivery_test.rs  diff_test.rs  feishu_message_test.rs  feishu_sink_test.rs  format_test.rs  goal_command_test.rs  goal_coordinator_test.rs  goal_display_test.rs  goal_evaluator_test.rs  goal_policy_test.rs  goal_runtime_test.rs  goal_verifier_test.rs  id_validation_test.rs  main.rs  manual_compact_llm_test.rs  markdown_render_test.rs  model_metadata_test.rs  orchestrator_compact_test.rs  pipeline_test.rs  protocol_test.rs  render_test.rs  repl_ask_user_render_test.rs  repl_completion_test.rs  repl_diff_test.rs  repl_interrupt_test.rs  (+29 more)
src/napi/: Cargo.toml  build.rs
src/napi/src/: lib.rs
(+1669 files in other folders)
